# pcb-rnd

./: AUTHORS  Changelog  INSTALL  Makefile  Makefile.conf.in  Makefile.in  README  Release_notes  aclocal.m4  config.auto.h.in  config.guess  config.h  config.h.in  config.manual.h.in  config.sub  configure  configure.ac  fourLayerTestTwo.pcb  globalconst.h
.pc/: applied-patches
README_FILES/: Makefile.in
data/: Makefile  Makefile.in  README  icon-theme-installer  pcb-rnd.desktop  pcb-rnd.file  pcb.desktop  pcb.xml  x-excellon.desktop  x-gerber.desktop  x-pcb-footprint.desktop  x-pcb-layout.desktop  x-pcb-netlist.desktop
debian/: README  changelog  control  copyright  pcb-gtk.lintian-overrides  pcb-lesstif.lintian-overrides  pcb-lesstif.menu  pcb-rnd-autocrop.install  pcb-rnd-autoplace.install  pcb-rnd-autoroute.install  pcb-rnd-common.docs  pcb-rnd-common.lintian-overrides  pcb-rnd-core.install  pcb-rnd-core.menu  pcb-rnd-diag.install  pcb-rnd-distalign.install  pcb-rnd-distaligntext.install  pcb-rnd-djopt.install  pcb-rnd-edif.install  pcb-rnd-fontmode.install  pcb-rnd-fp-wget.install  pcb-rnd-gcode.install  pcb-rnd-gerber.install  pcb-rnd-gsch2pcb.install  pcb-rnd-gtk.install  pcb-rnd-gtk.menu  pcb-rnd-gtk.postinst  pcb-rnd-kicad.install  (+23 more)
doc/: README  (+52 more)
src/pcb-gpmi/gpmi_plugin/gpmi_pkg/coordgeo/: Makefile.am  gpmi.conf
src/pcb-gpmi/gpmi_plugin/gpmi_pkg/dialogs/: Makefile.am  dialogs.c  dialogs.h  gpmi.conf
src/pcb-gpmi/gpmi_plugin/gpmi_pkg/layout/: Makefile.am  coord.c  create.c  debug_draw.c  draw.c  gpmi.conf  layers.c  layout.h  object.c  page.c  search.c
(+5549 files in other folders)
