# This file is package-specific. Do include it in the distribution.
#
# GPMI fingerprint: Makefile.am.ext-pkg

# End INST_PATH with /
INST_PATH = pcb-gpmi/
FILE_NAME = dialogs

SOURCE  = dialogs.c
HEADER  = dialogs.h

PKG_LDFLAGS = 

PCB_GPMI_ROOT=../../..
include $(PCB_GPMI_ROOT)/Makefile.config
INCLUDES = -I.. -I../.. -I $(PCB_SRC)
