# This file is package-specific. Do include it in the distribution.
#
# GPMI fingerprint: Makefile.am.ext-pkg

# End INST_PATH with /
INST_PATH = pcb-gpmi/
FILE_NAME = layout

SOURCE  = search.c
SOURCE += object.c
SOURCE += create.c
SOURCE += layers.c
SOURCE += page.c

HEADER  = layout.h

PKG_LDFLAGS = 

include ../../../Makefile.config
INCLUDES = -I $(PCB_SRC)
